# molecule-plugins

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .pre-commit-config.yaml  .taplo.toml  LICENSE  MANIFEST.in  README.md  README.rst  bindep.txt  biome.json  build  build.sh  codecov.yml  conftest.py  cspell.config.yaml  mypy-baseline.txt  pyproject.toml  pytest.ini  requirements.yml  setup.cfg  tox.ini
.config/: ansible-lint.yml  dictionary.txt
.github/: dependabot.yml
.github/workflows/: ack.yml  push.yml  release.yml  tox.yml
doc/ec2/: README.rst  platforms.rst
doc/openstack/: README.rst  platforms.rst
doc/vagrant/: README.rst
molecule/test-podman/: converge.yml  molecule.yml
src/molecule_azure/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: INSTALL.rst  create.yml
src/molecule_azure/test/functional/: test_azure.py
src/molecule_ec2/: driver.py
src/molecule_ec2/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: create.yml
src/molecule_ec2/test/functional/: test_ec2.py
src/molecule_gce/playbooks/: destroy.yml
src/molecule_plugins/: _version.py
src/molecule_plugins/azure/: driver.py
src/molecule_plugins/azure/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: converge.yml  create.yml  destroy.yml
src/molecule_plugins/containers/: __init__.py  driver.py
src/molecule_plugins/containers/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: converge.yml
src/molecule_plugins/containers/schema/: driver.json
src/molecule_plugins/docker/: __init__.py  driver.py
src/molecule_plugins/docker/playbooks/: Dockerfile.j2  create.yml  destroy.yml  validate-dockerfile.yml
src/molecule_plugins/docker/playbooks/filter_plugins/: get_docker_networks.py
src/molecule_plugins/docker/playbooks/tasks/: create_network.yml  delete_network.yml
src/molecule_plugins/docker/schema/: driver.json
src/molecule_plugins/ec2/: driver.py
src/molecule_plugins/ec2/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: create.yml  destroy.yml  prepare.yml
src/molecule_plugins/gce/: driver.py
src/molecule_plugins/gce/cookiecutter/: cookiecutter.json
src/molecule_plugins/gce/playbooks/: create.yml  destroy.yml
src/molecule_plugins/gce/playbooks/files/: windows_auth.py
src/molecule_plugins/gce/playbooks/handlers/: main.yml
src/molecule_plugins/gce/playbooks/tasks/: create_linux_instance.yml  create_windows_instance.yml
src/molecule_plugins/openstack/: __init__.py  driver.py
src/molecule_plugins/openstack/playbooks/: create.yml  destroy.yml  prepare.yml
src/molecule_plugins/openstack/playbooks/tasks/: server_addr.yml  vars.yml
src/molecule_plugins/podman/: __init__.py  driver.py
src/molecule_plugins/podman/playbooks/: create.yml  destroy.yml  validate-dockerfile.yml
src/molecule_plugins/podman/schema/: driver.json
src/molecule_plugins/vagrant/: driver.py
src/molecule_plugins/vagrant/modules/: vagrant.py
src/molecule_plugins/vagrant/playbooks/: create.yml  destroy.yml  prepare.yml
test/azure/: test_driver.py
test/azure/functional/: test_azure.py
test/containers/: __init__.py  conftest.py  test_driver.py
test/containers/functional/: .ansible-lint  __init__.py  conftest.py  test_containers.py
test/docker/: conftest.py  test_driver.py  test_func.py
test/docker/scenarios/env-substitution/molecule/default/: molecule.yml
test/ec2/: test_driver.py
test/ec2/functional/: .ansible-lint  test_ec2.py
test/gce/: test_driver.py
test/gce/functional/: test_func.py
test/gce/scenarios/label-verify/: INSTALL.md  destroy.yml  requirements.yml
test/gce/scenarios/label-verify/tasks/: create_linux_instance.yml  create_windows_instance.yml
test/gce/scenarios/linux/: INSTALL.md  converge.yml  destroy.yml  molecule.yml  requirements.yml
test/gce/scenarios/linux/files/: windows_auth.py
test/gce/scenarios/linux/tasks/: create_linux_instance.yml  create_windows_instance.yml
test/gce/scenarios/windows/: create.yml  molecule.yml  prepare.yml  verify.yml
test/gce/scenarios/windows/files/: windows_auth.py
test/gce/scenarios/windows/handlers/: main.yml
test/gce/scenarios/windows/tasks/: create_linux_instance.yml  create_windows_instance.yml
test/openstack/: conftest.py  test_driver.py  test_func.py
test/openstack/scenarios/molecule/default/: molecule.yml
test/openstack/scenarios/molecule/multiple/: molecule.yml
test/openstack/scenarios/molecule/network/: converge.yml  molecule.yml
test/openstack/scenarios/molecule/security_group/: molecule.yml
test/openstack/scenarios/molecule/volume/: molecule.yml
test/podman/: conftest.py  test_driver.py  test_func.py
test/vagrant-plugin/functional/: test_func.py
test/vagrant-plugin/scenarios/molecule/box_url/: molecule.yml
test/vagrant-plugin/scenarios/molecule/default-compat/: create.yml  destroy.yml
test/vagrant-plugin/scenarios/molecule/multi-node/: molecule.yml
test/vagrant-plugin/scenarios/molecule/network/: verify.yml
test/vagrant/functional/: test_func.py
test/vagrant/scenarios/molecule/default-compat/: create.yml  destroy.yml
test/vagrant/scenarios/molecule/invalid_net/: molecule.yml
test/vagrant/scenarios/molecule/multi-node/: molecule.yml
test/vagrant_plugin/: test_driver.py
test/vagrant_plugin/functional/: conftest.py  test_func.py
test/vagrant_plugin/scenarios/molecule/box_url/: molecule.yml
test/vagrant_plugin/scenarios/molecule/default-compat/: converge.yml  create.yml
test/vagrant_plugin/scenarios/molecule/hostname/: molecule.yml
test/vagrant_plugin/scenarios/molecule/invalid/: converge.yml
test/vagrant_plugin/scenarios/molecule/multi-node/: verify.yml
test/vagrant_plugin/scenarios/molecule/network/: molecule.yml
test/vagrant_plugin/scenarios/molecule/provider_config_options/: verify.yml
test/vagrant_plugin/scenarios/molecule/vagrant_root/: molecule.yml  verify.yml
tools/: create_testbox.sh  extract_plugin_names.py  generate-templates.sh  test-setup.sh  toml_to_json.py
(+22 files in other folders)
