[metadata]
name = molecule-cloud
url = https://github.com/ansible-community/molecule-cloud
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-cloud/issues
    Release Management = https://github.com/ansible-community/molecule-cloud/releases
    CI = https://github.com/ansible-community/molecule-cloud/actions

    Documentation = https://molecule.readthedocs.io
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule-cloud
description = Molecule Plugin for Clouds :: run molecule tests on various clouds
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    azure

[options]
use_scm_version = True
python_requires = >=3.8
package_dir =
  = src
packages = find:
zip_safe = False

# These are required in actual runtime:
install_requires =
    # molecule plugins are not allowed to mention Ansible as a direct dependency
    molecule >= 3.5.0

[options.extras_require]
test =
    molecule[ansible,test]

[options.entry_points]
molecule.driver =
    azure = molecule_azure.driver:Azure
    ec2 = molecule_ec2.driver:EC2

[options.packages.find]
where = src

[options.package_data]
ansiblelint = py.typed

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata
# indention is a typo in ruamel.yaml's API
ignore-words-list = indention
