[metadata]
name = molecule-plugins
url = https://github.com/ansible-community/molecule-plugins
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-plugins/issues
    Release Management = https://github.com/ansible-community/molecule-plugins/releases
    CI = https://github.com/ansible-community/molecule-plugins/actions

    Documentation = https://molecule.readthedocs.io
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule-plugins
description = Molecule Plugins
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    testing
    molecule
    plugin

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
include_package_data = True
zip_safe = False

# These are required in actual runtime:
install_requires =
    # molecule plugins are not allowed to mention Ansible as a direct dependency
    molecule >= 4.0
    molecule-azure
    molecule-gce

[options.extras_require]
test =
    molecule[ansible,test]
    pytest-helpers-namespace >= 2019.1.8

[options.packages.find]
where = src
